qLua/Compiler/CodeAnalysis/QLuaParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.13.2
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from E:/Development/Small Projects/qLua/grammar/QLua.g4 by ANTLR 4.13.2

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

namespace qLua.Compiler.CodeAnalysis {
using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.13.2")]
[System.CLSCompliant(false)]
public partial class QLuaParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, T__39=40, T__40=41, T__41=42, T__42=43, T__43=44, T__44=45, 
		T__45=46, T__46=47, T__47=48, T__48=49, T__49=50, T__50=51, T__51=52, 
		T__52=53, T__53=54, T__54=55, T__55=56, T__56=57, T__57=58, T__58=59, 
		T__59=60, T__60=61, T__61=62, T__62=63, T__63=64, T__64=65, T__65=66, 
		T__66=67, T__67=68, T__68=69, T__69=70, T__70=71, T__71=72, T__72=73, 
		T__73=74, T__74=75, T__75=76, T__76=77, T__77=78, T__78=79, T__79=80, 
		T__80=81, T__81=82, T__82=83, T__83=84, T__84=85, NAME=86, NORMALSTRING=87, 
		CHARSTRING=88, TEMPLATESTRING=89, LONGSTRING=90, INT=91, HEX=92, FLOAT=93, 
		HEX_FLOAT=94, COMMENT=95, LINE_COMMENT=96, WS=97, SHEBANG=98;
	public const int
		RULE_chunk = 0, RULE_block = 1, RULE_stat = 2, RULE_stat_semicolon = 3, 
		RULE_stat_varassign = 4, RULE_stat_break = 5, RULE_stat_continue = 6, 
		RULE_stat_goto = 7, RULE_stat_do = 8, RULE_stat_while = 9, RULE_stat_repeat = 10, 
		RULE_stat_if = 11, RULE_stat_if_branch = 12, RULE_stat_elseif_branch = 13, 
		RULE_stat_else_branch = 14, RULE_stat_for = 15, RULE_stat_forin = 16, 
		RULE_classLevelStat = 17, RULE_clstat_func1 = 18, RULE_clstat_func2 = 19, 
		RULE_clstat_vardecl = 20, RULE_clstat_tabledecon = 21, RULE_clstat_classdef = 22, 
		RULE_clstat_interfacedef = 23, RULE_clstat_enumdef = 24, RULE_attnamelist = 25, 
		RULE_attname = 26, RULE_attrib = 27, RULE_laststat = 28, RULE_label = 29, 
		RULE_funcname = 30, RULE_varlist = 31, RULE_namelist = 32, RULE_explist = 33, 
		RULE_exp = 34, RULE_prefixexp = 35, RULE_functioncall = 36, RULE_varOrExp = 37, 
		RULE_var = 38, RULE_varSuffix = 39, RULE_nameAndArgs = 40, RULE_args = 41, 
		RULE_functiondef = 42, RULE_funcbody = 43, RULE_funchead = 44, RULE_parlist = 45, 
		RULE_param = 46, RULE_paramVararg = 47, RULE_tableconstructor = 48, RULE_fieldlist = 49, 
		RULE_field = 50, RULE_fieldsep = 51, RULE_operatorOr = 52, RULE_operatorAnd = 53, 
		RULE_operatorComparison = 54, RULE_operatorStrcat = 55, RULE_operatorAddSub = 56, 
		RULE_operatorMulDivMod = 57, RULE_operatorBitwise = 58, RULE_operatorUnary = 59, 
		RULE_operatorPower = 60, RULE_number = 61, RULE_string = 62, RULE_enumDefinition = 63, 
		RULE_enumBody = 64, RULE_enumProperty = 65, RULE_enumValue = 66, RULE_classDefinition = 67, 
		RULE_classExtends = 68, RULE_classImplements = 69, RULE_classBody = 70, 
		RULE_interfaceDefinition = 71, RULE_interfaceExtends = 72, RULE_interfaceBody = 73, 
		RULE_interfaceStat = 74, RULE_interfaceFunction = 75, RULE_interfaceField = 76, 
		RULE_constructorCall = 77, RULE_constructorCallArgs = 78, RULE_typeAnnotation = 79, 
		RULE_typeTuple = 80, RULE_nilableType = 81, RULE_type = 82, RULE_basicType = 83, 
		RULE_funcType = 84, RULE_tableType = 85, RULE_tableField = 86, RULE_arrayType = 87, 
		RULE_baseTypeForArray = 88, RULE_tableDeconstructionList = 89, RULE_tableDeconstruction = 90, 
		RULE_tableDeconstructionField = 91, RULE_declaration = 92, RULE_moduleDeclaration = 93, 
		RULE_moduleDeclBody = 94, RULE_moduleLevelDeclStat = 95, RULE_classDeclaration = 96, 
		RULE_classDeclBody = 97, RULE_interfaceDeclaration = 98, RULE_interfaceDeclBody = 99, 
		RULE_interfaceDeclStat = 100, RULE_enumDeclaration = 101, RULE_enumDeclBody = 102;
	public static readonly string[] ruleNames = {
		"chunk", "block", "stat", "stat_semicolon", "stat_varassign", "stat_break", 
		"stat_continue", "stat_goto", "stat_do", "stat_while", "stat_repeat", 
		"stat_if", "stat_if_branch", "stat_elseif_branch", "stat_else_branch", 
		"stat_for", "stat_forin", "classLevelStat", "clstat_func1", "clstat_func2", 
		"clstat_vardecl", "clstat_tabledecon", "clstat_classdef", "clstat_interfacedef", 
		"clstat_enumdef", "attnamelist", "attname", "attrib", "laststat", "label", 
		"funcname", "varlist", "namelist", "explist", "exp", "prefixexp", "functioncall", 
		"varOrExp", "var", "varSuffix", "nameAndArgs", "args", "functiondef", 
		"funcbody", "funchead", "parlist", "param", "paramVararg", "tableconstructor", 
		"fieldlist", "field", "fieldsep", "operatorOr", "operatorAnd", "operatorComparison", 
		"operatorStrcat", "operatorAddSub", "operatorMulDivMod", "operatorBitwise", 
		"operatorUnary", "operatorPower", "number", "string", "enumDefinition", 
		"enumBody", "enumProperty", "enumValue", "classDefinition", "classExtends", 
		"classImplements", "classBody", "interfaceDefinition", "interfaceExtends", 
		"interfaceBody", "interfaceStat", "interfaceFunction", "interfaceField", 
		"constructorCall", "constructorCallArgs", "typeAnnotation", "typeTuple", 
		"nilableType", "type", "basicType", "funcType", "tableType", "tableField", 
		"arrayType", "baseTypeForArray", "tableDeconstructionList", "tableDeconstruction", 
		"tableDeconstructionField", "declaration", "moduleDeclaration", "moduleDeclBody", 
		"moduleLevelDeclStat", "classDeclaration", "classDeclBody", "interfaceDeclaration", 
		"interfaceDeclBody", "interfaceDeclStat", "enumDeclaration", "enumDeclBody"
	};

	private static readonly string[] _LiteralNames = {
		null, "';'", "'='", "'break'", "'continue'", "'goto'", "'do'", "'end'", 
		"'while'", "'repeat'", "'until'", "'if'", "'then'", "'elseif'", "'else'", 
		"'for'", "','", "'in'", "'function'", "'local'", "'<'", "'>'", "'return'", 
		"'::'", "'.'", "':'", "'nil'", "'false'", "'true'", "'...'", "'as'", "'?'", 
		"'('", "')'", "'['", "']'", "'{'", "'}'", "'or'", "'||'", "'and'", "'&&'", 
		"'<='", "'>='", "'~='", "'=='", "'!='", "'==='", "'!=='", "'instanceof'", 
		"'is'", "'??'", "'..'", "'+'", "'-'", "'*'", "'/'", "'%'", "'//'", "'&'", 
		"'|'", "'~'", "'<<'", "'>>'", "'not'", "'#'", "'!'", "'++'", "'--'", "'^'", 
		"'enum'", "'class'", "'extends'", "'implements'", "'interface'", "'new'", 
		"'| nil'", "'any'", "'boolean'", "'number'", "'string'", "'table'", "'userdata'", 
		"'thread'", "'declare'", "'module'"
	};
	private static readonly string[] _SymbolicNames = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, "NAME", "NORMALSTRING", "CHARSTRING", "TEMPLATESTRING", "LONGSTRING", 
		"INT", "HEX", "FLOAT", "HEX_FLOAT", "COMMENT", "LINE_COMMENT", "WS", "SHEBANG"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "QLua.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override int[] SerializedAtn { get { return _serializedATN; } }

	static QLuaParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public QLuaParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public QLuaParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class ChunkContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public BlockContext block() {
			return GetRuleContext<BlockContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Eof() { return GetToken(QLuaParser.Eof, 0); }
		public ChunkContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_chunk; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IQLuaVisitor<TResult> typedVisitor = visitor as IQLuaVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitChunk(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ChunkContext chunk() {
		ChunkContext _localctx = new ChunkContext(Context, State);
		EnterRule(_localctx, 0, RULE_chunk);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 206;
			block();
			State = 207;
			Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class BlockContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public StatContext[] stat() {
			return GetRuleContexts<StatContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public StatContext stat(int i) {
			return GetRuleContext<StatContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public DeclarationContext[] declaration() {
			return GetRuleContexts<DeclarationContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public DeclarationContext declaration(int i) {
			return GetRuleContext<DeclarationContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public LaststatContext laststat() {
			return GetRuleContext<LaststatContext>(0);
		}
		public BlockContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_block; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IQLuaVisitor<TResult> typedVisitor = visitor as IQLuaVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitBlock(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public BlockContext block() {
		BlockContext _localctx = new BlockContext(Context, State);
		EnterRule(_localctx, 2, RULE_block);
		int _la;
		try {
			int _alt;
			State = 239;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,6,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 212;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,0,Context);
				while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						State = 209;
						stat();
						}
						} 
					}
					State = 214;
					ErrorHandler.Sync(this);
					_alt = Interpreter.AdaptivePredict(TokenStream,0,Context);
				}
				State = 218;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				while (_la==T__83) {
					{
					{
					State = 215;
					declaration();
					}
					}
					State = 220;
					ErrorHandler.Sync(this);
					_la = TokenStream.LA(1);
				}
				State = 222;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & 4194328L) != 0)) {
					{
					State = 221;
					laststat();
					}
				}

				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 227;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				while (_la==T__83) {
					{
					{
					State = 224;
					declaration();
					}
					}
					State = 229;
					ErrorHandler.Sync(this);
					_la = TokenStream.LA(1);
				}
				State = 233;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,4,Context);
				while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						State = 230;
						stat();
						}
						} 
					}
					State = 235;
					ErrorHandler.Sync(this);
					_alt = Interpreter.AdaptivePredict(TokenStream,4,Context);
				}
				State = 237;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & 4194328L) != 0)) {
					{
					State = 236;
					laststat();
					}
				}

				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class StatContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public Stat_semicolonContext stat_semicolon() {
			return GetRuleContext<Stat_semicolonContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Stat_varassignContext stat_varassign() {
			return GetRuleContext<Stat_varassignContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public FunctioncallContext functioncall() {
			return GetRuleContext<FunctioncallContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public LabelContext label() {
			return GetRuleContext<LabelContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Stat_breakContext stat_break() {
			return GetRuleContext<Stat_breakContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Stat_continueContext stat_continue() {
			return GetRuleContext<Stat_continueContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Stat_gotoContext stat_goto() {
			return GetRuleContext<Stat_gotoContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Stat_doContext stat_do() {
			return GetRuleContext<Stat_doContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Stat_whileContext stat_while() {
			return GetRuleContext<Stat_whileContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Stat_repeatContext stat_repeat() {
			return GetRuleContext<Stat_repeatContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Stat_ifContext stat_if() {
			return GetRuleContext<Stat_ifContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Stat_forContext stat_for() {
			return GetRuleContext<Stat_forContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Stat_forinContext stat_forin() {
			return GetRuleContext<Stat_forinContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ClassLevelStatContext classLevelStat() {
			return GetRuleContext<ClassLevelStatContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ConstructorCallContext constructorCall() {
			return GetRuleContext<ConstructorCallContext>(0);
		}
		public StatContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_stat; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IQLuaVisitor<TResult> typedVisitor = visitor as IQLuaVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitStat(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public StatContext stat() {
		StatContext _localctx = new StatContext(Context, State);
		EnterRule(_localctx, 4, RULE_stat);
		try {
			State = 256;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,7,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 241;
				stat_semicolon();
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 242;
				stat_varassign();
				}
				break;
			case 3:
				EnterOuterAlt(_localctx, 3);
				{
				State = 243;
				functioncall();
				}
				break;
			case 4:
				EnterOuterAlt(_localctx, 4);
				{
				State = 244;
				label();
				}
				break;
			case 5:
				EnterOuterAlt(_localctx, 5);
				{
